          rule.

Tue Jul 18 09:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Win32.pm:
          Increased delay factor from 2 to 3, downloading executables
          seems to take longer now

Tue Jul 18 09:54:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
          Removed chorus support

Mon Jul 17 16:06:57 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Unload_LibACE.cpp: Alter the libACE suffix for HP-UX on
          PA-RISC only. Also see:
          Fri Jul 14 19:44:03 UTC 2006  john_c  <johnc@ociweb.com>

Mon Jul 17 22:11:42 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * examples/Threads/process_semaphore.cpp:

          Added #include of ace/OS_NS_stdlib.h to get ACE_OS::atoi().

Mon Jul 19 11:21:56 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/String_Base.cpp:
        * ace/String_Base.inl:

          Explicitly qualify size_type parameters with "typename" to force
          some compilers (Sun Studio 10) to recognize it as a type.

Mon Jul 17 17:49:41 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * include/makeinclude/platform_hpux_aCC.GNU (SOFLAGS):

          Corrected shared library path for Itanium builds.

        * protocols/ace/HTBP/HTBP_ID_Requestor.cpp (get_HTID):

          Use new ACE_CString::size_type type to hold string
          position/index value, instead of "int".  Addresses "comparison
          between signed and unsigned" warnings.

Mon Jul 17 16:04:07 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Added information about the use of atomic operations on SPARC
          Solaris.

Mon Jul 17 15:09:21 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Refcounted_Auto_Ptr.{h inl} (null): Changed the return type
          of the null() method from int to bool in order to more accurately